--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "dependencies": {
     "axios": "^0.21.1",
     "immer": "^8.0.1",
+    "lodash": "^4.17.20",
     "next": "latest",
     "next-redux-wrapper": "^6.0.2",
+    "nookies": "^2.5.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-redux": "^7.2.2",
@@ -31,6 +33,7 @@
     "swr": "^0.4.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
