--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "lint": "eslint --fix ."
   },
   "dependencies": {
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
     "axios": "^0.21.1",
     "immer": "^8.0.1",
     "lodash": "^4.17.20",
@@ -33,6 +35,8 @@
     "swr": "^0.4.1"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.1.2",
+    "@emotion/babel-preset-css-prop": "^11.0.0",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
