--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
+    "@hookform/resolvers": "1.3.0",
     "axios": "^0.21.1",
     "immer": "^8.0.1",
     "lodash": "^4.17.20",
@@ -29,10 +30,12 @@
     "nookies": "^2.5.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-hook-form": "^6.15.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "swr": "^0.4.1"
+    "swr": "^0.4.1",
+    "yup": "^0.32.8"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.1.2",
