--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "next": "latest",
     "next-redux-wrapper": "^6.0.2",
     "nookies": "^2.5.2",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.10",
     "react-hook-form": "^6.15.1",
+    "react-quill": "^2.0.0-beta.2",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
@@ -42,8 +43,8 @@
     "@emotion/babel-preset-css-prop": "^11.0.0",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.22",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^16.9.10",
+    "@types/react-dom": "^16.9.10",
     "@types/react-redux": "^7.1.16",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
