--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.10",
     "react-hook-form": "^6.15.1",
+    "react-paginate": "^7.0.0",
     "react-quill": "^2.0.0-beta.2",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
@@ -45,6 +46,7 @@
     "@types/node": "^14.14.22",
     "@types/react": "^16.9.10",
     "@types/react-dom": "^16.9.10",
+    "@types/react-paginate": "^6.2.1",
     "@types/react-redux": "^7.1.16",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
@@ -55,6 +57,7 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "fast-deep-equal": "^3.1.3",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
