--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.10",
     "react-hook-form": "^6.15.1",
+    "react-icons": "^4.1.0",
     "react-paginate": "^7.0.0",
     "react-quill": "^2.0.0-beta.2",
     "react-redux": "^7.2.2",
