--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@emotion/styled": "^11.0.0",
     "@hookform/resolvers": "1.3.0",
     "axios": "^0.21.1",
+    "dayjs": "^1.10.4",
     "emotion-reset": "^3.0.0",
     "immer": "^8.0.1",
     "lodash": "^4.17.20",
