--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "swr": "^0.4.1",
+    "uuid": "^8.3.2",
     "yup": "^0.32.8"
   },
   "devDependencies": {
@@ -52,6 +53,7 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-paginate": "^6.2.1",
     "@types/react-redux": "^7.1.16",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
     "eslint": "^7.19.0",
