--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "immer": "^8.0.1",
     "lodash": "^4.17.20",
     "next": "latest",
+    "next-auth": "^3.4.2",
     "next-iron-session": "^4.1.11",
     "next-redux-wrapper": "^6.0.2",
     "nookies": "^2.5.2",
     "react": "^16.9.0",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.9.10",
     "react-hook-form": "^6.15.1",
     "react-icons": "^4.1.0",
@@ -40,7 +42,7 @@
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "swr": "^0.4.1",
+    "swr": "^0.4.2",
     "uuid": "^8.3.2",
     "yup": "^0.32.8"
   },
@@ -48,6 +50,7 @@
     "@emotion/babel-plugin": "^11.1.2",
     "@emotion/babel-preset-css-prop": "^11.0.0",
     "@types/lodash": "^4.14.168",
+    "@types/next-auth": "^3.1.24",
     "@types/node": "^14.14.22",
     "@types/react": "^16.9.10",
     "@types/react-dom": "^16.9.10",
