--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "dayjs": "^1.10.4",
     "emotion-reset": "^3.0.0",
     "immer": "^8.0.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "next": "latest",
     "next-auth": "^3.4.2",
-    "next-iron-session": "^4.1.11",
+    "next-iron-session": "^4.1.12",
     "next-redux-wrapper": "^6.0.2",
     "nookies": "^2.5.2",
     "react": "^16.9.0",
@@ -49,6 +50,7 @@
   "devDependencies": {
     "@emotion/babel-plugin": "^11.1.2",
     "@emotion/babel-preset-css-prop": "^11.0.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.168",
     "@types/next-auth": "^3.1.24",
     "@types/node": "^14.14.22",
