--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "name": "with-typescript",
   "version": "1.0.0",
   "scripts": {
+    "generate-client": "openapi-generator-cli generate -g typescript-axios -i ../server/build/openapi.json -o generated-sources/openapi",
     "dev": "next",
     "build": "next build",
     "start": "next start",
@@ -22,6 +23,7 @@
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
     "@hookform/resolvers": "1.3.0",
+    "@openapitools/openapi-generator-cli": "^2.1.26",
     "axios": "^0.21.1",
     "dayjs": "^1.10.4",
     "emotion-reset": "^3.0.0",
